// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Meta /> <Meta type="ang" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-ang"
    id="metadata"
  >
    <div
      class="shabad-nav left disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(0deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
    <div
      class="meta"
    >
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
    <div
      class="shabad-nav right disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(180deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Meta /> <Meta type="hukamnama" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-hukamnama"
    id="metadata"
  >
    <div
      class="meta"
    >
      <div
        class="meta-hukamnama"
      >
        <div
          class="meta-hukamnama-left"
        >
          <div>
            react calendar
          </div>
          <span>
            Past Hukamnamas
          </span>
        </div>
        <h4>
          Daily Hukamnama Sri Harmandir Sahib, Amritsar
          , 
          <span />
        </h4>
        <div
          class="meta-hukamnama-right"
        >
          <svg
            style="fill: rgb(1, 102, 155); width: 18px;"
            viewBox="0 0 491.807 491.807"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M485.802 221.184l-184.32-184.32a20.506 20.506 0 00-22.323-4.444c-7.659 3.154-12.636 10.65-12.636 18.924v82.002c-117.842 4.833-220.651 84.398-253.583 198.41C-1.314 381.195-.208 421.356.201 436.491l.082 3.973c0 9.216 6.164 17.306 15.032 19.743 1.823.492 3.645.737 5.448.737a20.51 20.51 0 0017.592-9.994c81.121-136.356 188.6-140.227 228.168-136.376v105.411c0 8.274 4.977 15.77 12.636 18.924 7.68 3.195 16.466 1.413 22.323-4.444l184.32-184.32c8.007-8.01 8.007-20.954 0-28.961z"
            />
          </svg>
          <a
            href="/shabad?id=4299"
          >
            Go to shabad
          </a>
        </div>
      </div>
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
  </div>
</div>
`;

exports[`<Meta /> <Meta type="shabad" /> renders correctly 1`] = `
<div>
  <div
    class="metadata-shabad"
    id="metadata"
  >
    <div
      class="shabad-nav left disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(0deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
    <div
      class="meta"
    >
      <h4
        class="gurbani-font"
      >
        rwgu swrMg
         - 
        sRI gurU gRMQ swihb jI
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          AMg
           
          1211
        </a>
        
      </h4>
      <h4>
        Raag Saarang
         - 
        Sri Guru Granth Sahib Ji
         - 
        <a
          href="/ang?ang=1211&source=G"
        >
          Ang
           
          1211
        </a>
        
      </h4>
    </div>
    <div
      class="shabad-nav right disabled-nav"
    >
      <a>
        <svg
          class="chevron "
          data-testid="chevron"
          height="1em"
          style="transform: rotate(180deg);"
          viewBox="0 0 320 512"
          width="1em"
        >
          <path
            d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
